@@ -1,7 +1,8 @@
 2023-06-17 Dusan Jocic <dusanjocic@msn>
 	* [Engine] Misc fixes
 	* [Engine] Limit connect packets from one IP address in the past 2 seconds
-
+	* [Engine] Block all movement-triggered event entities, these should always be on a player
+	
 2023-06-16 Dusan Jocic <dusanjocic@msn>
 	* [SoundSystem] Returns false if the sound wasn't freed
 	* [Engine] Fixed rare 'bad command byte' error after executing a client command
